works but groups don't exit active group list

--- a/simulations/Mesa Simulations/Mesa ABM of Random Beacon.ipynb
+++ b/simulations/Mesa Simulations/Mesa ABM of Random Beacon.ipynb
@@ -57,7 +57,8 @@
     "total_tickets = 500 # total virtual stakers\n",
     "nodes = 10 # number of nodes\n",
     "active_group_threshold = 5 # min number of active groups to pick from\n",
-    "signature_threshold = 10 # min number of nodes needed to sign\n"
+    "signature_threshold = 10 # min number of nodes needed to sign\n",
+    "group_expiry = 5 #number of steps after which a group expires\n"
    ]
   },
   {
@@ -127,7 +128,7 @@
     }
    ],
    "source": [
-    "beacon_model = model.Beacon_Model(nodes, ticket_distribution, active_group_threshold, group_size, signature_threshold)"
+    "beacon_model = model.Beacon_Model(nodes, ticket_distribution, active_group_threshold, group_size, signature_threshold, group_expiry)"
    ]
   },
   {
@@ -139,12 +140,53 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "5\n",
+      "No relay request\n",
+      "5\n",
+      "No relay request\n",
+      "5\n",
+      "No relay request\n",
+      "5\n",
+      "No relay request\n",
+      "5\n",
+      "No relay request\n",
+      "5\n",
+      "No relay request\n",
+      "5\n",
+      "No relay request\n",
+      "5\n",
+      "No relay request\n",
+      "5\n",
+      "No relay request\n",
+      "5\n",
+      "No relay request\n",
+      "5\n",
+      "No relay request\n",
+      "5\n",
+      "No relay request\n",
+      "5\n",
+      "No relay request\n",
+      "5\n",
+      "No relay request\n",
+      "5\n",
+      "No relay request\n",
+      "5\n",
+      "No relay request\n",
+      "5\n",
+      "No relay request\n",
+      "5\n",
+      "No relay request\n",
+      "5\n",
+      "No relay request\n",
+      "5\n",
       "No relay request\n"
      ]
     }
    ],
    "source": [
-    "beacon_model.step()"
+    "\n",
+    "for i in range (20):\n",
+    "    beacon_model.step()"
    ]
   },
   {
