group expiry works

--- a/simulations/Mesa Simulations/Mesa ABM of Random Beacon.ipynb
+++ b/simulations/Mesa Simulations/Mesa ABM of Random Beacon.ipynb
@@ -137,15 +137,149 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "object of type 'Group' has no len()",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-66cf087402e5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mbeacon_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/go/src/github.com/keep-core/simulations/Mesa Simulations/model.py\u001b[0m in \u001b[0;36mstep\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     34\u001b[0m         \u001b[0;31m#check how many active groups are available\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrefresh_active_list\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 36\u001b[0;31m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mactive_groups\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     37\u001b[0m         \u001b[0;31m#generate relay requests\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrelay_request\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbool\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: object of type 'Group' has no len()"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "No relay request\n",
+      "group ID 0 expiry 4\n",
+      "group ID 1 expiry 4\n",
+      "group ID 2 expiry 4\n",
+      "group ID 3 expiry 4\n",
+      "group ID 4 expiry 4\n",
+      "5\n",
+      "No relay request\n",
+      "group ID 0 expiry 3\n",
+      "group ID 1 expiry 3\n",
+      "group ID 2 expiry 3\n",
+      "group ID 3 expiry 3\n",
+      "group ID 4 expiry 3\n",
+      "5\n",
+      "No relay request\n",
+      "group ID 0 expiry 2\n",
+      "group ID 1 expiry 2\n",
+      "group ID 2 expiry 2\n",
+      "group ID 3 expiry 2\n",
+      "group ID 4 expiry 2\n",
+      "5\n",
+      "No relay request\n",
+      "group ID 0 expiry 1\n",
+      "group ID 1 expiry 1\n",
+      "group ID 2 expiry 1\n",
+      "group ID 3 expiry 1\n",
+      "group ID 4 expiry 1\n",
+      "5\n",
+      "No relay request\n",
+      "group ID 0 expiry 0\n",
+      "group ID 1 expiry 0\n",
+      "group ID 2 expiry 0\n",
+      "group ID 3 expiry 0\n",
+      "group ID 4 expiry 0\n",
+      "0\n",
+      "No relay request\n",
+      "group ID 0 expiry -1\n",
+      "group ID 1 expiry -1\n",
+      "group ID 2 expiry -1\n",
+      "group ID 3 expiry -1\n",
+      "group ID 4 expiry -1\n",
+      "0\n",
+      "No relay request\n",
+      "group ID 0 expiry -2\n",
+      "group ID 1 expiry -2\n",
+      "group ID 2 expiry -2\n",
+      "group ID 3 expiry -2\n",
+      "group ID 4 expiry -2\n",
+      "0\n",
+      "No relay request\n",
+      "group ID 0 expiry -3\n",
+      "group ID 1 expiry -3\n",
+      "group ID 2 expiry -3\n",
+      "group ID 3 expiry -3\n",
+      "group ID 4 expiry -3\n",
+      "0\n",
+      "No relay request\n",
+      "group ID 0 expiry -4\n",
+      "group ID 1 expiry -4\n",
+      "group ID 2 expiry -4\n",
+      "group ID 3 expiry -4\n",
+      "group ID 4 expiry -4\n",
+      "0\n",
+      "No relay request\n",
+      "group ID 0 expiry -5\n",
+      "group ID 1 expiry -5\n",
+      "group ID 2 expiry -5\n",
+      "group ID 3 expiry -5\n",
+      "group ID 4 expiry -5\n",
+      "0\n",
+      "No relay request\n",
+      "group ID 0 expiry -6\n",
+      "group ID 1 expiry -6\n",
+      "group ID 2 expiry -6\n",
+      "group ID 3 expiry -6\n",
+      "group ID 4 expiry -6\n",
+      "0\n",
+      "No relay request\n",
+      "group ID 0 expiry -7\n",
+      "group ID 1 expiry -7\n",
+      "group ID 2 expiry -7\n",
+      "group ID 3 expiry -7\n",
+      "group ID 4 expiry -7\n",
+      "0\n",
+      "No relay request\n",
+      "group ID 0 expiry -8\n",
+      "group ID 1 expiry -8\n",
+      "group ID 2 expiry -8\n",
+      "group ID 3 expiry -8\n",
+      "group ID 4 expiry -8\n",
+      "0\n",
+      "No relay request\n",
+      "group ID 0 expiry -9\n",
+      "group ID 1 expiry -9\n",
+      "group ID 2 expiry -9\n",
+      "group ID 3 expiry -9\n",
+      "group ID 4 expiry -9\n",
+      "0\n",
+      "No relay request\n",
+      "group ID 0 expiry -10\n",
+      "group ID 1 expiry -10\n",
+      "group ID 2 expiry -10\n",
+      "group ID 3 expiry -10\n",
+      "group ID 4 expiry -10\n",
+      "0\n",
+      "No relay request\n",
+      "group ID 0 expiry -11\n",
+      "group ID 1 expiry -11\n",
+      "group ID 2 expiry -11\n",
+      "group ID 3 expiry -11\n",
+      "group ID 4 expiry -11\n",
+      "0\n",
+      "No relay request\n",
+      "group ID 0 expiry -12\n",
+      "group ID 1 expiry -12\n",
+      "group ID 2 expiry -12\n",
+      "group ID 3 expiry -12\n",
+      "group ID 4 expiry -12\n",
+      "0\n",
+      "No relay request\n",
+      "group ID 0 expiry -13\n",
+      "group ID 1 expiry -13\n",
+      "group ID 2 expiry -13\n",
+      "group ID 3 expiry -13\n",
+      "group ID 4 expiry -13\n",
+      "0\n",
+      "No relay request\n",
+      "group ID 0 expiry -14\n",
+      "group ID 1 expiry -14\n",
+      "group ID 2 expiry -14\n",
+      "group ID 3 expiry -14\n",
+      "group ID 4 expiry -14\n",
+      "0\n",
+      "No relay request\n",
+      "group ID 0 expiry -15\n",
+      "group ID 1 expiry -15\n",
+      "group ID 2 expiry -15\n",
+      "group ID 3 expiry -15\n",
+      "group ID 4 expiry -15\n"
      ]
     }
    ],
@@ -157,9 +291,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([], dtype=int64),)\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "a = [[5,6,7,8], [1,10,10,12,13,14], [1,2,3,4]]\n",
@@ -169,9 +311,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-ff6500fc3eb7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mones\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'list'"
+     ]
+    }
+   ],
    "source": [
     "a[1].append(np.ones(2).list)\n",
     "print(a)"
