isses with registering new groups

--- a/simulations/Mesa Simulations/Mesa ABM of Random Beacon.ipynb
+++ b/simulations/Mesa Simulations/Mesa ABM of Random Beacon.ipynb
@@ -116,14 +116,15 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n"
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'id'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-b5f4ca363399>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mbeacon_model\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mBeacon_Model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnodes\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mticket_distribution\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mactive_group_threshold\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgroup_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msignature_threshold\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgroup_expiry\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/go/src/github.com/keep-core/simulations/Mesa Simulations/model.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, nodes, ticket_distribution, active_group_threshold, group_size, signature_threshold, group_expiry)\u001b[0m\n\u001b[1;32m     27\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mactive_group_threshold\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mactive_groups\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroup_registration\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 29\u001b[0;31m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mactive_groups\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mid\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     30\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'id'"
      ]
     }
    ],
@@ -133,210 +134,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\n",
-      "No relay request\n",
-      "group ID 0 expiry 4\n",
-      "group ID 1 expiry 4\n",
-      "group ID 2 expiry 4\n",
-      "group ID 3 expiry 4\n",
-      "group ID 4 expiry 4\n",
-      "5\n",
-      "No relay request\n",
-      "group ID 0 expiry 3\n",
-      "group ID 1 expiry 3\n",
-      "group ID 2 expiry 3\n",
-      "group ID 3 expiry 3\n",
-      "group ID 4 expiry 3\n",
-      "5\n",
-      "No relay request\n",
-      "group ID 0 expiry 2\n",
-      "group ID 1 expiry 2\n",
-      "group ID 2 expiry 2\n",
-      "group ID 3 expiry 2\n",
-      "group ID 4 expiry 2\n",
-      "5\n",
-      "No relay request\n",
-      "group ID 0 expiry 1\n",
-      "group ID 1 expiry 1\n",
-      "group ID 2 expiry 1\n",
-      "group ID 3 expiry 1\n",
-      "group ID 4 expiry 1\n",
-      "5\n",
-      "No relay request\n",
-      "group ID 0 expiry 0\n",
-      "group ID 1 expiry 0\n",
-      "group ID 2 expiry 0\n",
-      "group ID 3 expiry 0\n",
-      "group ID 4 expiry 0\n",
-      "0\n",
-      "No relay request\n",
-      "group ID 0 expiry -1\n",
-      "group ID 1 expiry -1\n",
-      "group ID 2 expiry -1\n",
-      "group ID 3 expiry -1\n",
-      "group ID 4 expiry -1\n",
-      "0\n",
-      "No relay request\n",
-      "group ID 0 expiry -2\n",
-      "group ID 1 expiry -2\n",
-      "group ID 2 expiry -2\n",
-      "group ID 3 expiry -2\n",
-      "group ID 4 expiry -2\n",
-      "0\n",
-      "No relay request\n",
-      "group ID 0 expiry -3\n",
-      "group ID 1 expiry -3\n",
-      "group ID 2 expiry -3\n",
-      "group ID 3 expiry -3\n",
-      "group ID 4 expiry -3\n",
-      "0\n",
-      "No relay request\n",
-      "group ID 0 expiry -4\n",
-      "group ID 1 expiry -4\n",
-      "group ID 2 expiry -4\n",
-      "group ID 3 expiry -4\n",
-      "group ID 4 expiry -4\n",
-      "0\n",
-      "No relay request\n",
-      "group ID 0 expiry -5\n",
-      "group ID 1 expiry -5\n",
-      "group ID 2 expiry -5\n",
-      "group ID 3 expiry -5\n",
-      "group ID 4 expiry -5\n",
-      "0\n",
-      "No relay request\n",
-      "group ID 0 expiry -6\n",
-      "group ID 1 expiry -6\n",
-      "group ID 2 expiry -6\n",
-      "group ID 3 expiry -6\n",
-      "group ID 4 expiry -6\n",
-      "0\n",
-      "No relay request\n",
-      "group ID 0 expiry -7\n",
-      "group ID 1 expiry -7\n",
-      "group ID 2 expiry -7\n",
-      "group ID 3 expiry -7\n",
-      "group ID 4 expiry -7\n",
-      "0\n",
-      "No relay request\n",
-      "group ID 0 expiry -8\n",
-      "group ID 1 expiry -8\n",
-      "group ID 2 expiry -8\n",
-      "group ID 3 expiry -8\n",
-      "group ID 4 expiry -8\n",
-      "0\n",
-      "No relay request\n",
-      "group ID 0 expiry -9\n",
-      "group ID 1 expiry -9\n",
-      "group ID 2 expiry -9\n",
-      "group ID 3 expiry -9\n",
-      "group ID 4 expiry -9\n",
-      "0\n",
-      "No relay request\n",
-      "group ID 0 expiry -10\n",
-      "group ID 1 expiry -10\n",
-      "group ID 2 expiry -10\n",
-      "group ID 3 expiry -10\n",
-      "group ID 4 expiry -10\n",
-      "0\n",
-      "No relay request\n",
-      "group ID 0 expiry -11\n",
-      "group ID 1 expiry -11\n",
-      "group ID 2 expiry -11\n",
-      "group ID 3 expiry -11\n",
-      "group ID 4 expiry -11\n",
-      "0\n",
-      "No relay request\n",
-      "group ID 0 expiry -12\n",
-      "group ID 1 expiry -12\n",
-      "group ID 2 expiry -12\n",
-      "group ID 3 expiry -12\n",
-      "group ID 4 expiry -12\n",
-      "0\n",
-      "No relay request\n",
-      "group ID 0 expiry -13\n",
-      "group ID 1 expiry -13\n",
-      "group ID 2 expiry -13\n",
-      "group ID 3 expiry -13\n",
-      "group ID 4 expiry -13\n",
-      "0\n",
-      "No relay request\n",
-      "group ID 0 expiry -14\n",
-      "group ID 1 expiry -14\n",
-      "group ID 2 expiry -14\n",
-      "group ID 3 expiry -14\n",
-      "group ID 4 expiry -14\n",
-      "0\n",
-      "No relay request\n",
-      "group ID 0 expiry -15\n",
-      "group ID 1 expiry -15\n",
-      "group ID 2 expiry -15\n",
-      "group ID 3 expiry -15\n",
-      "group ID 4 expiry -15\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "for i in range (20):\n",
     "    beacon_model.step()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(array([], dtype=int64),)\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "a = [[5,6,7,8], [1,10,10,12,13,14], [1,2,3,4]]\n",
-    "print(np.where(a == np.min(a)))\n",
-    "#print(np.where(a == np.min(a))[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'numpy.ndarray' object has no attribute 'list'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-ff6500fc3eb7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mones\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'list'"
-     ]
-    }
-   ],
-   "source": [
-    "a[1].append(np.ones(2).list)\n",
-    "print(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
